# libcamera2opencv

qtviewer/: CMakeLists.txt  fatigue_detector.cpp  fatigue_detector.h  main.cpp
